_docs/v0.22.0/README.md
---
version: v0.22.0
category: 'Table of Contents'
title: README
source_url: 'https://github.com/atom/electron/blob/master/docs/README.md'
permalink: /docs/v0.22.0/index.html
---

## Guides

* [Application distribution](tutorial/application-distribution)
* [Application packaging](tutorial/application-packaging)
* [Using native node modules](tutorial/using-native-node-modules)
* [Debugging browser process](tutorial/debugging-browser-process)
* [Using Selenium and WebDriver](tutorial/using-selenium-and-webdriver)
* [DevTools extension](tutorial/devtools-extension)

## Tutorial

* [Quick start](tutorial/quick-start)
* [Desktop environment integration](tutorial/desktop-environment-integration)
* [Online/offline event detection](tutorial/online-offline-events)

## API references

* [Synopsis](api/synopsis)
* [Process object](api/process)
* [Supported Chrome command line switches](api/chrome-command-line-switches)

Custom DOM elements:

* [`File` object](api/file-object)
* [`<webview>` tag](api/web-view-tag)
* [`window.open` function](api/window-open)

Modules for browser side:

* [app](api/app)
* [auto-updater](api/auto-updater)
* [browser-window](api/browser-window)
* [content-tracing](api/content-tracing)
* [dialog](api/dialog)
* [global-shortcut](api/global-shortcut)
* [ipc (browser)](api/ipc-browser)
* [menu](api/menu)
* [menu-item](api/menu-item)
* [power-monitor](api/power-monitor)
* [protocol](api/protocol)
* [tray](api/tray)

Modules for web page:

* [ipc (renderer)](api/ipc-renderer)
* [remote](api/remote)
* [web-frame](api/web-frame)

Modules for both sides:

* [clipboard](api/clipboard)
* [crash-reporter](api/crash-reporter)
* [native-image](api/native-image)
* [screen](api/screen)
* [shell](api/shell)

## Development

* [Coding style](development/coding-style)
* [Source code directory structure](development/source-code-directory-structure)
* [Technical differences to NW.js (formerly node-webkit)](development/atom-shell-vs-node-webkit)
* [Build instructions (Mac)](development/build-instructions-mac)
* [Build instructions (Windows)](development/build-instructions-windows)
* [Build instructions (Linux)](development/build-instructions-linux)
* [Setting up symbol server in debugger](development/setting-up-symbol-server)
